@@ -1,5 +1,7 @@
 package it.cnr.istc.stlab.edwin;
 
+import java.lang.reflect.InvocationTargetException;
+import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -13,13 +15,18 @@ public class EquivalenceSetGraphBuilderParameters {
 	private String equivalencePropertyToObserve, specializationPropertyToObserve, specializationPropertyForProperties,
 			equivalencePropertiesForProperties, esgPropertiesFolder, esgClassesFolder;
 
-	private EquivalenceSetGraph esgProperties;
+	private RocksDBBackedEquivalenceSetGraph esgProperties;
 
-	private boolean computeClosure = true;
+	private boolean computeClosure = false;
 	private boolean computeStats = true;
+	private boolean computeEstimation = false;
+	private boolean exportInRDFFormat = false;
 
 	private Set<String> notEquivalenceProperties = new HashSet<>();
 	private Set<String> notSpecializationProperties = new HashSet<>();
+	private Set<String> additionalEquivalencePropertiesToObserve = new HashSet<>(),
+			additionalSpecializationPropertiesToObserve = new HashSet<>();
+	private String[] datasetPaths;
 	private ObservedEntitiesSelector observedEntitiesSelector;
 	private ExtensionalSizeEstimator extensionalSizeEstimator;
 
@@ -136,8 +143,10 @@ public class EquivalenceSetGraphBuilderParameters {
 	}
 
 	public static EquivalenceSetGraphBuilderParameters getParameters(Configuration config)
-			throws InstantiationException, IllegalAccessException, ClassNotFoundException {
+			throws InstantiationException, IllegalAccessException, ClassNotFoundException, IllegalArgumentException, InvocationTargetException, NoSuchMethodException, SecurityException {
 		EquivalenceSetGraphBuilderParameters parameters = new EquivalenceSetGraphBuilderParameters();
+
+		parameters.setDatasetPaths(config.getStringArray("datasetPaths"));
 
 		parameters.setEquivalencePropertyToObserve(config.getString("equivalencePropertyToObserve"));
 		parameters.setEquivalencePropertiesForProperties(config.getString("equivalencePropertyForProperties"));
@@ -152,6 +161,16 @@ public class EquivalenceSetGraphBuilderParameters {
 			parameters.addNotSpecializationProperties(config.getString("notSpecializationProperties").split(","));
 		}
 
+		if (config.containsKey("additionalEquivalencePropertiesToObserve")) {
+			parameters.setAdditionalEquivalencePropertiesToObserve(
+					new HashSet<>(Arrays.asList(config.getString("additionalEquivalencePropertiesToObserve"))));
+		}
+
+		if (config.containsKey("additionalSpecializationPropertiesToObserve")) {
+			parameters.setAdditionalEquivalencePropertiesToObserve(
+					new HashSet<>(Arrays.asList(config.getString("additionalSpecializationPropertiesToObserve"))));
+		}
+
 		parameters.setEsgFolder(config.getString("esgFolder"));
 
 		if (config.containsKey("esgPropertiesFolder")) {
@@ -164,12 +183,12 @@ public class EquivalenceSetGraphBuilderParameters {
 
 		if (config.containsKey("observedEntitiesSelector")) {
 			parameters.setObservedEntitiesSelector((ObservedEntitiesSelector) Class
-					.forName(config.getString("observedEntitiesSelector")).newInstance());
+					.forName(config.getString("observedEntitiesSelector")).getConstructor().newInstance());
 		}
 
 		if (config.containsKey("extensionalSizeEstimator")) {
 			parameters.setExtensionalSizeEstimator((ExtensionalSizeEstimator) Class
-					.forName(config.getString("extensionalSizeEstimator")).newInstance());
+					.forName(config.getString("extensionalSizeEstimator")).getConstructor().newInstance());
 		}
 
 		if (config.containsKey("esgName")) {
@@ -178,6 +197,14 @@ public class EquivalenceSetGraphBuilderParameters {
 
 		if (config.containsKey("esgBaseURI")) {
 			parameters.setEsgBaseURI(config.getString("esgBaseURI"));
+		}
+
+		if (config.containsKey("computeEstimations")) {
+			parameters.setComputeEstimation(config.getBoolean("computeEstimations"));
+		}
+
+		if (config.containsKey("exportInRDFFormat")) {
+			parameters.setExportInRDFFormat(config.getBoolean("exportInRDFFormat"));
 		}
 
 		return parameters;
@@ -199,19 +226,6 @@ public class EquivalenceSetGraphBuilderParameters {
 		this.esgBaseURI = esgBaseURI;
 	}
 
-	@Override
-	public String toString() {
-		return "EquivalenceSetGraphBuilderParameters [esgFolder=" + esgFolder + ", esgName=" + esgName + ", esgBaseURI="
-				+ esgBaseURI + ", equivalencePropertyToObserve=" + equivalencePropertyToObserve
-				+ ", specializationPropertyToObserve=" + specializationPropertyToObserve
-				+ ", specializationPropertyForProperties=" + specializationPropertyForProperties
-				+ ", equivalencePropertiesForProperties=" + equivalencePropertiesForProperties
-				+ ", esgPropertiesFolder=" + esgPropertiesFolder + ", esgClassesFolder=" + esgClassesFolder
-				+ ", notEquivalenceProperties=" + notEquivalenceProperties + ", notSpecializationProperties="
-				+ notSpecializationProperties + ", observedEntitiesSelector=" + observedEntitiesSelector
-				+ ", extensionalSizeEstimator=" + extensionalSizeEstimator + "]";
-	}
-
 	public boolean isComputeClosure() {
 		return computeClosure;
 	}
@@ -228,12 +242,147 @@ public class EquivalenceSetGraphBuilderParameters {
 		this.computeStats = computeStats;
 	}
 
-	public EquivalenceSetGraph getEsgProperties() {
+	public RocksDBBackedEquivalenceSetGraph getEsgProperties() {
 		return esgProperties;
 	}
 
-	public void setEsgProperties(EquivalenceSetGraph esgProperties) {
+	public void setEsgProperties(RocksDBBackedEquivalenceSetGraph esgProperties) {
 		this.esgProperties = esgProperties;
+	}
+
+	public boolean isComputeEstimation() {
+		return computeEstimation;
+	}
+
+	public void setComputeEstimation(boolean computeEstimation) {
+		this.computeEstimation = computeEstimation;
+	}
+
+	@Override
+	public String toString() {
+		return "EquivalenceSetGraphBuilderParameters [\n esgFolder=" + esgFolder + ",\n esgName=" + esgName
+				+ ",\n esgBaseURI=" + esgBaseURI + ",\n equivalencePropertyToObserve=" + equivalencePropertyToObserve
+				+ ",\n specializationPropertyToObserve=" + specializationPropertyToObserve
+				+ ",\n specializationPropertyForProperties=" + specializationPropertyForProperties
+				+ ",\n equivalencePropertiesForProperties=" + equivalencePropertiesForProperties
+				+ ",\n esgPropertiesFolder=" + esgPropertiesFolder + ",\n esgClassesFolder=" + esgClassesFolder
+				+ ",\n esgProperties=" + esgProperties + ",\n computeClosure=" + computeClosure + ",\n computeStats="
+				+ computeStats + ",\n computeEstimation=" + computeEstimation + ",\n exportInRDFFormat="
+				+ exportInRDFFormat + ",\n notEquivalenceProperties=" + notEquivalenceProperties
+				+ ",\n notSpecializationProperties=" + notSpecializationProperties
+				+ ",\n additionalEquivalencePropertiesToObserve=" + additionalEquivalencePropertiesToObserve
+				+ ",\n additionalSpecializationPropertiesToObserve=" + additionalSpecializationPropertiesToObserve
+				+ ",\n datasetPaths=" + Arrays.toString(datasetPaths) + ",\n observedEntitiesSelector="
+				+ observedEntitiesSelector + ",\n extensionalSizeEstimator=" + extensionalSizeEstimator + "]";
+	}
+
+	public String[] getDatasetPaths() {
+		return datasetPaths;
+	}
+
+	public void setDatasetPaths(String[] datasetPaths) {
+		this.datasetPaths = datasetPaths;
+	}
+
+	public Set<String> getAdditionalEquivalencePropertiesToObserve() {
+		return additionalEquivalencePropertiesToObserve;
+	}
+
+	public void setAdditionalEquivalencePropertiesToObserve(Set<String> additionalEquivalencePropertiesToObserve) {
+		this.additionalEquivalencePropertiesToObserve = additionalEquivalencePropertiesToObserve;
+	}
+
+	public Set<String> getAdditionalSpecializationPropertiesToObserve() {
+		return additionalSpecializationPropertiesToObserve;
+	}
+
+	public void setAdditionalSpecializationPropertiesToObserve(
+			Set<String> additionalSpecializationPropertiesToObserve) {
+		this.additionalSpecializationPropertiesToObserve = additionalSpecializationPropertiesToObserve;
+	}
+
+	public boolean isExportInRDFFormat() {
+		return exportInRDFFormat;
+	}
+
+	public void setExportInRDFFormat(boolean exportInRDFFormat) {
+		this.exportInRDFFormat = exportInRDFFormat;
+	}
+
+	public EquivalenceSetGraphBuilderParameters clone() {
+		EquivalenceSetGraphBuilderParameters parameters = new EquivalenceSetGraphBuilderParameters();
+
+		if (this.datasetPaths != null) {
+			parameters.setDatasetPaths(this.datasetPaths.clone());
+		}
+
+		if (this.equivalencePropertyToObserve != null) {
+			parameters.setEquivalencePropertyToObserve(new String(this.equivalencePropertyToObserve));
+		}
+
+		if (this.equivalencePropertiesForProperties != null) {
+			parameters.setEquivalencePropertiesForProperties(new String(this.equivalencePropertiesForProperties));
+		}
+
+		if (this.specializationPropertyToObserve != null) {
+			parameters.setSpecializationPropertyToObserve(new String(this.specializationPropertyToObserve));
+		}
+
+		if (this.specializationPropertyForProperties != null) {
+			parameters.setSpecializationPropertyForProperties(new String(this.specializationPropertyForProperties));
+		}
+
+		if (this.notEquivalenceProperties != null) {
+			parameters.notEquivalenceProperties = new HashSet<>(this.notEquivalenceProperties);
+		}
+
+		if (this.notSpecializationProperties != null) {
+			parameters.notSpecializationProperties = new HashSet<>(this.notSpecializationProperties);
+		}
+
+		if (this.additionalEquivalencePropertiesToObserve != null) {
+			parameters.additionalEquivalencePropertiesToObserve = new HashSet<>(
+					this.additionalEquivalencePropertiesToObserve);
+		}
+
+		if (this.additionalSpecializationPropertiesToObserve != null) {
+			parameters.additionalSpecializationPropertiesToObserve = new HashSet<>(
+					this.additionalSpecializationPropertiesToObserve);
+		}
+
+		if (this.esgFolder != null) {
+			parameters.esgFolder = new String(this.esgFolder);
+		}
+
+		if (this.esgPropertiesFolder != null) {
+			parameters.esgPropertiesFolder = new String(this.esgPropertiesFolder);
+		}
+
+		if (this.esgClassesFolder != null) {
+			parameters.esgClassesFolder = new String(this.esgClassesFolder);
+		}
+
+		if (this.observedEntitiesSelector != null) {
+			parameters.observedEntitiesSelector = this.observedEntitiesSelector;
+		}
+
+		if (this.extensionalSizeEstimator != null) {
+			parameters.extensionalSizeEstimator = this.extensionalSizeEstimator;
+		}
+
+		if (this.esgName != null) {
+			parameters.esgName = new String(this.esgName);
+		}
+
+		if (this.esgBaseURI != null) {
+			parameters.esgBaseURI = new String(this.esgBaseURI);
+		}
+
+		parameters.computeEstimation = this.computeEstimation;
+		parameters.computeClosure = this.computeClosure;
+
+		return parameters;
+
 	}
 
 }
